# vul-detect

./: Dependencies.txt  Dependencies_Win.bat  Makefile  README.md  __init__.py  __main__.py  pyproject.toml  setup.cfg  unitTestgithInteract.py  utility.py  vulErrors.py
main/: __init__.py  __main__.py  githInteract.py  graph.py  helper.py  main.py  report.py  scanner.py  unitTestSuite.py  utility.py  vulErrors.py
process/: __init__.py  org.py  repo.py  user.py  users.py  vulnerabilityAssignment.py
unittest/: Testing.py  testcase.py  unitTestScanner.py  unitTestVulnerabilityAssignment.py  unitTestgithInteract.py  unitTesthelper.py
