[metadata]
name = vulDetect
version = 0.5
summary = vulnerability analysis and visualization for GitHub repositories
description-file =
    README.MD

[options]
packages = find:
install_requires =
    pygithub>=1.55
    pygit2>=1.6.0
    bandit>=1.7.0
    flawfinder>=2.0.17
    networkx>=2.5.1
    matplotlib>=3.4.2
    karateclub>=1.2.0
    python-Levenshtein>=0.12.2

[options.entry_points]
    console_scripts =
        vulDetect = main.main:main
